--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
     height: 100vh;        /* Viewport-relative units */
     width: 50%;
 	float: left;
-	background: #ffe599;
+	background: #a2c4c9;
 	text-align: center;
 }
 
@@ -41,7 +41,6 @@ body {
 
 h1{
 	font-size: 4vw;
-	margin-top: 10vh;
 }
 
 img {
@@ -52,11 +51,11 @@ img {
 </head>
 <body>
 <div class='left' id="teaching">
-<img src='logo_dots_learning.png' alt='logo' width="35%">
+<img src='logo_dots.png' alt='logo' width="35%">
 <h1>teaching <br> statistics <br> is  awesome</h1>
 </div>
 <div class='right' id="learning">
-<img src='logo_dots_teaching.png' alt='logo' width="35%">
+<img src='logo_dots.png' alt='logo' width="35%">
 <h1>learning <br> statistics <br> is awesome</h1>
 </div>
 </body>
